refactor integration tests & few fixes